--- a/cardmodel/src/main/res/values/strings.xml
+++ b/cardmodel/src/main/res/values/strings.xml
@@ -29,4 +29,10 @@
     <string name="spellbook_title_war">War</string>
     <string name="spellbook_title_water">Water</string>
     <string name="spellbook_title_wind">Air</string>
+
+    <string name="enum_major_type">Main</string>
+    <string name="enum_minor_type">Minor</string>
+
+    <string name="enum_active_type">Active</string>
+    <string name="enum_passive_type">Passive</string>
 </resources>
