Correction on some secondary paths that wasn't available

--- a/cardmodel/src/main/res/values-es/strings.xml
+++ b/cardmodel/src/main/res/values-es/strings.xml
@@ -10,18 +10,18 @@
     <string name="spellbook_title_darkness">Oscuridad</string>
     <string name="spellbook_title_death">Muerte</string>
     <string name="spellbook_title_destruction">Destrucción</string>
-    <string name="spellbook_title_dream">Sueño</string>
+    <string name="spellbook_title_dream">Sueños</string>
     <string name="spellbook_title_earth">Tierra</string>
-    <string name="spellbook_title_emptyness">Vacio</string>
+    <string name="spellbook_title_emptyness">Vacío</string>
     <string name="spellbook_title_essence">Esencia</string>
     <string name="spellbook_title_fire">Fuego</string>
-    <string name="spellbook_title_free_access">Libre acceso</string>
+    <string name="spellbook_title_free_access">Libre Acceso</string>
     <string name="spellbook_title_illusion">Ilusión</string>
     <string name="spellbook_title_knowledge">Conocimiento</string>
     <string name="spellbook_title_light">Luz</string>
     <string name="spellbook_title_limit">Umbral</string>
     <string name="spellbook_title_literae">Literae</string>
-    <string name="spellbook_title_music">Música</string>
+    <string name="spellbook_title_music">Musical</string>
     <string name="spellbook_title_necromancer">Nigromancia</string>
     <string name="spellbook_title_nobility">Nobleza</string>
     <string name="spellbook_title_peace">Paz</string>
